--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-            <img src="kuink_simple.svg"/>
+            <img src="kuink_simple.svg"/> <br/>
             <a name="kuink-is-coming-soon" class="anchor" href="#kuink-is-coming-soon"><span class="octicon octicon-link"></span></a>Kuink is coming soon...</h3>
       </section>
     </div>
